# gpturd

./: Cargo.toml  README.md
src/: error.rs  main.rs  model.rs
src/app/: app.rs  device.rs  message.rs  options.rs
src/data/: convert.rs  mod.rs  parse.rs  tokenize.rs
src/ui/: colors.rs  generate_popup.rs  logo.rs  main_screen.rs
