[package]
name = "gpturd"
version = "0.0.1"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["metal"] }
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.30.0-alpha.5"
